# letter_puzzle

./: CMakeLists.txt  abba.cpp  abc.cpp  functions.h  lesok.cpp  main.cpp  measure.cpp  measure.h  naumova.cpp  resolver.cpp  resolver.h  solver.cpp  solver.h
puzzles/: 2020.cpp  CMakeLists.txt  abba.cpp  abc.cpp  buketik.cpp  eng_math.cpp  functions.h  futbol.cpp  gnom.cpp  lesok.cpp  licei_matboy.cpp  maiz.cpp  naumova.cpp  putin.cpp  rabota.cpp  rebus1.cpp  rebus1.h  send_more.cpp  shad_2021.cpp  udar.cpp  walaw.cpp  waverma.cpp  you.cpp
solver/: CMakeLists.txt  resolver.cpp  resolver.h  solver.cpp  solver.h  types.h
